add github pages deployment step

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,15 @@ language: node_js
 node_js:
   - "node"
 dist: trusty
+
 script:
   - npm run build
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  keep_history: true
+  on:
+    branch: master
+  target_branch: gh-pages
