--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ deploy:
   github_token: $GITHUB_TOKEN
   keep_history: true
   on:
-    branch: master
+    branch: travis
   target_branch: gh-pages
