--- a/package.json
+++ b/package.json
@@ -1,39 +1,14 @@
 {
-  "name": "gltf-rv",
+  "name": "PolyKingdom",
   "version": "1.0.0",
-  "description": "The official glTF sample viewer.",
-  "main": "dist/gltf-reference-viewer.js",
-  "module": "dist/gltf-reference-viewer.module.js",
+  "description": "WebGL game.",
+  "main": "output/PolyKingdom.js",
+  "module": "output/PolyKingdom.module.js",
   "scripts": {
     "start": "electron electron/main.js",
-    "start-offscreen": "electron electron/offscreen.js --enable-logging",
     "build": "rollup -c",
     "dev": "concurrently \"rollup -c -w\" \"serve --listen 8000 .\"",
-    "dev:electron": "concurrently \"rollup -c -w\" \"npm start\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint src/**/*.js electron/*.js",
-    "lint:fix": "eslint --fix src/**/*.js electron/*.js",
-    "version": "npm run build",
-    "postversion": "git push && git push --tags",
-    "package-mac": "electron-packager . gltf-reference-viewer --overwrite --platform=darwin --arch=x64 --prune=true --out=release-builds",
-    "package-win": "electron-packager . gltf-reference-viewer --overwrite --asar=true --platform=win32 --arch=ia32 --prune=true --out=release-builds --version-string.ProductName=\"glTF Reference Viewer\"",
-    "package-linux": "electron-packager . gltf-reference-viewer --overwrite --asar=true --platform=linux --arch=x64 --prune=true --out=release-builds"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ux3d/glTF-WebGL-PBR.git"
-  },
-  "keywords": [
-    "gltf",
-    "webgl",
-    "pbr"
-  ],
-  "author": "Khronos Group Inc.",
-  "license": "MIT",
-  "dependencies": {
-    "argparse": "^1.0.10",
-    "gl-matrix": "^2.8.1",
-    "open": "0.0.5"
+    "dev:electron": "concurrently \"rollup -c -w\" \"npm start\""
   },
   "devDependencies": {
     "acorn": "^6.0.4",
@@ -46,9 +21,5 @@
     "rollup-plugin-glslify": "^1.1.0",
     "rollup-plugin-node-resolve": "^3.4.0",
     "serve": "^10.1.1"
-  },
-  "bugs": {
-    "url": "https://github.com/KhronosGroup/glTF-Sample-Viewer/issues"
-  },
-  "homepage": "https://github.com/KhronosGroup/glTF-Sample-Viewer/#readme"
+  }
 }
